tasks/tier-2/opportunity-discount-calculator/force-app/main/default/objects/Opportunity/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <description>Customer loyalty tier</description>
    <label>Customer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
                <default>true</default>
                <label>Bronze</label>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>