tasks/tier-2/opportunity-discount-calculator/force-app/main/default/objects/Opportunity/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <description>Calculated discount percentage based on deal size and customer tier</description>
    <label>Discount Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>